--- a/index.html
+++ b/index.html
@@ -12,49 +12,43 @@
     <main class="main-programas">
 
         <div class="title">
-            <h2>Nossos Programas</h2>
-            <h1>Escolha a melhor opção <span>para você</span></h1>
+            <div class="textfield-title">
+                <h2>Nossos Programas</h2>
+                <h1>Escolha a melhor opção <span>para você</span></h1>
+            </div>
         </div>
         <div class="container">
-            <div class="card">
-                <div class="img-card musculacao">
-
+            <div class="container-left">
+                <div class="card">
+                    <div class="img-card musculacao">
+                    </div>
+                    <div class="textfield">
+                        <h2>Musculação</h2>
+                    </div>
                 </div>
-                <div class="textfield">
-                    <h2>Musculação</h2>
-
+                <div class="card">
+                    <div class="img-card yoga">
+                    </div>
+                    <div class="textfield">
+                        <h2>Yoga</h2>
+                    </div>
                 </div>
-
             </div>
-            <div class="card">
-                <div class="img-card yoga">
-
+            <div class="container-right">
+                <div class="card">
+                    <div class="img-card cardio">
+                    </div>
+                    <div class="textfield">
+                        <h2>Cardio</h2>
+                    </div>
                 </div>
-                <div class="textfield">
-                    <h2>Yoga</h2>
-
+                <div class="card">
+                    <div class="img-card peso">
+                    </div>
+                    <div class="textfield">
+                        <h2>Redução de peso</h2>
+                    </div>
                 </div>
-
-            </div>
-            <div class="card">
-                <div class="img-card cardio">
-
-                </div>
-                <div class="textfield">
-                    <h2>Cárdio</h2>
-
-                </div>
-
-            </div>
-            <div class="card">
-                <div class="img-card peso">
-
-                </div>
-                <div class="textfield">
-                    <h2>Redução de peso</h2>
-
-                </div>
-
             </div>
     
 
